--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1240,3 +1240,39 @@ section .container {
   }
 }
 
+
+/*Preloader*/
+/* Style for the preloader */
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  background-image: url("../img/Portfolio\ bg.jpg"); 
+  background-size: cover;
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #18d26e;
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+body.loaded .preloader {
+  display: none;
+}
